@@ -108,6 +108,7 @@ public class DefSettings {
     public static final IndirSetting<Boolean> FREECAMLOCKELAV =  new IndirSetting<>(global, "camera.free.lock-elevation");    //[Bool] Lock freecam elevation angle
     public static final IndirSetting<Integer> TIMERVOLUME =  new IndirSetting<>(global, "audio.timer-volume");                //[Int] Timer volume
     public static final IndirSetting<Boolean> NOGOBAUDIO = new IndirSetting<>(global, "audio.no-gob-audio");
+    public static final IndirSetting<Boolean> SHOWHOVERTOOLTIPS = new IndirSetting<>(global, "gameplay.show-hover-tooltip");  //[Bool] Toggle hover tooltips
 
     //Themes
     public static final IndirSetting<String[]> THEMES = new IndirSetting<>(session, "theme.themes");
@@ -207,6 +208,7 @@ public class DefSettings {
 	BADKIN.ensure(2);
 	ALWAYSLONGTIP.ensure(true);
 	SHOWFPS.ensure(true);
+	SHOWHOVERTOOLTIPS.ensure(false);
 	//Belts
 	SHOWFKBELT.ensure(false);
 	FKBELTPAGE.ensure(0);
